add dummy image

--- a/index.html
+++ b/index.html
@@ -23,45 +23,45 @@
             <div class="swiper-lazy-preloader"></div>
         </div>
         <div class="swiper-slide ">
-            <img data-src="./images/2.jpg"class="swiper-lazy" alt="img">
-            <div class="swiper-lazy-preloader"></div>
+            <img src="https://dummyimage.com/600x400/d3d3d3/d2f2f2&text=loading" data-src="./images/2.jpg"class="swiper-lazy" alt="img">
+            <!--            <div class="swiper-lazy-preloader"></div>-->
         </div>
         <div class="swiper-slide ">
-            <img data-src="./images/3.jpg"class="swiper-lazy" alt="img">
-            <div class="swiper-lazy-preloader"></div>
+            <img src="https://dummyimage.com/600x400/d3d3d3/d2f2f2&text=loading"  data-src="./images/3.jpg"class="swiper-lazy" alt="img">
+            <!--            <div class="swiper-lazy-preloader"></div>-->
         </div>
         <div class="swiper-slide ">
-            <img data-src="./images/4.jpg"class="swiper-lazy" alt="img">
-            <div class="swiper-lazy-preloader"></div>
+            <img src="https://dummyimage.com/600x400/d3d3d3/d2f2f2&text=loading" data-src="./images/4.jpg"class="swiper-lazy" alt="img">
+            <!--            <div class="swiper-lazy-preloader"></div>-->
         </div>
         <div class="swiper-slide ">
-            <img data-src="./images/5.jpg"class="swiper-lazy" alt="img">
-            <div class="swiper-lazy-preloader"></div>
+            <img src="https://dummyimage.com/600x400/d3d3d3/d2f2f2&text=loading" data-src="./images/5.jpg"class="swiper-lazy" alt="img">
+            <!--            <div class="swiper-lazy-preloader"></div>-->
         </div>
         <div class="swiper-slide ">
-            <img data-src="./images/6.jpg"class="swiper-lazy" alt="img">
-            <div class="swiper-lazy-preloader"></div>
+            <img src="https://dummyimage.com/600x400/d3d3d3/d2f2f2&text=loading" data-src="./images/6.jpg"class="swiper-lazy" alt="img">
+            <!--            <div class="swiper-lazy-preloader"></div>-->
         </div>
         <div class="swiper-slide ">
-            <img data-src="./images/7.jpg"class="swiper-lazy" alt="img">
-            <div class="swiper-lazy-preloader"></div>
+            <img src="https://dummyimage.com/600x400/d3d3d3/d2f2f2&text=loading" data-src="./images/7.jpg"class="swiper-lazy" alt="img">
+            <!--            <div class="swiper-lazy-preloader"></div>-->
         </div>
         <div class="swiper-slide ">
-            <img data-src="./images/8.jpg"class="swiper-lazy" alt="img">
-            <div class="swiper-lazy-preloader"></div>
+            <img src="https://dummyimage.com/600x400/d3d3d3/d2f2f2&text=loading" data-src="./images/8.jpg"class="swiper-lazy" alt="img">
+            <!--            <div class="swiper-lazy-preloader"></div>-->
         </div>
         <div class="swiper-slide ">
-            <img data-src="./images/9.jpg"class="swiper-lazy" alt="img">
-            <div class="swiper-lazy-preloader"></div>
+            <img src="https://dummyimage.com/600x400/d3d3d3/d2f2f2&text=loading" data-src="./images/9.jpg"class="swiper-lazy" alt="img">
+            <!--            <div class="swiper-lazy-preloader"></div>-->
         </div>
         <div class="swiper-slide ">
-            <img data-src="./images/10.jpg" class="swiper-lazy" alt="img">
-            <div class="swiper-lazy-preloader"></div>
+            <img src="https://dummyimage.com/600x400/d3d3d3/d2f2f2&text=loading" data-src="./images/10.jpg" class="swiper-lazy" alt="img">
+            <!--            <div class="swiper-lazy-preloader"></div>-->
         </div>
         
         <div class="swiper-slide">
-            <img data-src="./images/11.jpg" class="swiper-lazy" alt="img">
-            <div class="swiper-lazy-preloader"></div>
+            <img src="https://dummyimage.com/600x400/d3d3d3/d2f2f2&text=loading" data-src="./images/11.jpg" class="swiper-lazy" alt="img">
+            <!--            <div class="swiper-lazy-preloader"></div>-->
         </div>
         
         </div>
