dummy img bug fix

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <div class="swiper-container mySwiper">
         <div class="swiper-wrapper">
         <div class="swiper-slide ">
-            <img src="https://dummyimage.com/600x400/d3d3d3/d2f2f2&text=loading" data-src="./images/1.jpg"class="swiper-lazy" alt="img">
-            <!--            <div class="swiper-lazy-preloader"></div>-->
+            <img data-src="./images/1.jpg"class="swiper-lazy" alt="img">
+            <div class="swiper-lazy-preloader"></div>
         </div>
         <div class="swiper-slide ">
             <img src="https://dummyimage.com/600x400/d3d3d3/d2f2f2&text=loading" data-src="./images/2.jpg"class="swiper-lazy" alt="img">
@@ -69,7 +69,7 @@
         <div class="swiper-button-prev"></div>
     </div>
     
-
+    <!-- Swiper with jquery-load library-->
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="index.js"></script>
 </body>
